--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Online Interactive _ Quiz with Answers</title>
+		<link rel="stylesheet" href="mystyle.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="myscript.js"></script>
+	</head>
+	<body>
+		<h1>
+			Online Interactive _ Quiz
+		</h1>
+
+		<p>
+		</p>
+	</body>
+</html>
 
