--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 		<script src="myscript.js"></script>
 	</head>
 	<body>
-		<h1>
-			Online Interactive _ Quiz
-		</h1>
-
-		<p>
-		</p>
+		<div class="question">
+			<h2>What is 24/6?</h2>
+			<p id="flip">Click to show answer</p>
+			<p id="panel">4</p>
+		</div>
 	</body>
 </html>
 
