--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Online Interactive _ Quiz with Answers</title>
+		<title>Online Interactive APES Quiz with Answers</title>
 		<link rel="stylesheet" href="mystyle.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="myscript.js"></script>
 	</head>
 	<body>
-		<div class="question">
-			<h2>What is 24/6?</h2>
-			<p id="flip">Click to show answer</p>
-			<p id="panel">4</p>
-		</div>
+		<h1>Quiz</h1>
+		<p id="question">What is 24/6?</p>
+		<button id="btnrev">Reveal Answer</button>
+		<p id="ans">4</p>
+		
+		<p id="question">What is 3 * 2?</p>
+		<button id="btnrev">Reveal Answer</button>
+		<p id="ans">6</p>
 	</body>
 </html>
-
