--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 		<p id="question">What is 3 * 2?</p>
 		<button id="btnrev">Reveal Answer</button>
 		<p id="ans">6</p>
+		
+		<p>Name: <input type="text" id="test" value=""></p>
+		<button>Check</button>
 	</body>
 </html>
