--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Online Interactive APES Quiz with Answers</title>
+		<title>Online Interactive Quiz with Answers</title>
 		<link rel="stylesheet" href="mystyle.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="myscript.js"></script>
 	</head>
 	<body>
 		<h1>Quiz</h1>
-		<p id="question">What is 24/6?</p>
-		<button id="btnrev">Reveal Answer</button>
+		<!-- <p id="q">What is 24/6?</p>
+		<button id="submit">Reveal Answer</button>
 		<p id="ans">4</p>
 		
-		<p id="question">What is 3 * 2?</p>
-		<button id="btnrev">Reveal Answer</button>
-		<p id="ans">6</p>
+		<p id="q2">What is 3 * 2?</p>
+		<button id="submit">Reveal Answer</button>
+		<p id="ans2">6</p> -->
 		
-		<p>Name: <input type="text" id="test" value=""></p>
+		<p>What is 6 * 1? <input type="text" id="test" value=""></p>
 		<button>Check</button>
 	</body>
 </html>
