--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 		<p id="directions">Enter answers with spaces in between terms and denote with basic text math functions, enter "2&sup2;+2x" as "2^2 + 2x" <br> Use "C" as the arbitrary constant for integration</p>
 		
 		<p><b>1)</b> Solve: &int;4x + 2<br><input type="text" id="ans1" value=""></p>
-		<button id="check1">Check</button>
+		<button class="btn" id="check1">Check</button>
 		<p class="right" id="r1">Correct!</p>
 		<p class="wrong" id="w1">Wrong, try again!</p>
 		
-		<p><b>2)</b> Solve: 2 * 6<br><input type="text" id="ans2" value=""></p>
-		<button id="check2">Check</button>
+		<p><b>2)</b> Solve: <sup>d</sup>&frasl;<sub>dx</sub>12x&sup3; + 7x&sup2; + 5x + 497<br><input type="text" id="ans2" value=""></p>
+		<button class="btn" id="check2">Check</button>
 		<p class="right" id="r2">Correct!</p>
 		<p class="wrong" id="w2">Wrong, try again!</p>
+		
+		<p><b>3)</b> Solve: &int;4x + 2<br><input type="text" id="ans3" value=""></p>
+		<button class="btn" id="check3">Check</button>
+		<p class="right" id="r3">Correct!</p>
+		<p class="wrong" id="w3">Wrong, try again!</p>
 	</body>
 </html>
