--- a/index.html
+++ b/index.html
@@ -10,16 +10,44 @@
 		<h1>Quiz</h1>	
 		<p id="directions">Enter answers with spaces in between terms and denote with basic text math functions, enter "2&sup2;+2x" as "2^2 + 2x" <br> Use "C" as the arbitrary constant for integration</p>
 		
-		<p><b>1)</b> Solve: &int;4x + 2<br><input type="text" id="userAns1" value=""></p>
+		<p><b>1)</b> Solve: &int;<i>(4x + 2)dx</i><br><input type="text" id="userAns1" value=""></p>
 		<button class="btn" id="check1">Check</button>
 		<p id="feedback1">&nbsp;</p>
 		
-		<p><br><b>2)</b> Solve: <sup>d</sup>&frasl;<sub>dx</sub>12x&sup3; + 7x&sup2; + 5x + 497<br><input type="text" id="userAns2" value=""></p>
+		<p><br><b>2)</b> Solve: <sup>d</sup>&frasl;<sub>dx</sub>(<i>12x&sup3; + 7x&sup2; + 5x + 497</i>)<br><input type="text" id="userAns2" value=""></p>
 		<button class="btn" id="check2">Check</button>
 		<p id="feedback2">&nbsp;</p>
 		
-		<p><br><b>3)</b> Solve: &int;18x&sup2; + 6x + 3<br><input type="text" id="userAns3" value=""></p>
+		<p><br><b>3)</b> Solve: &int;<i>(18x&sup2; + 6x + 3)dx</i><br><input type="text" id="userAns3" value=""></p>
 		<button class="btn" id="check3">Check</button>
 		<p id="feedback3">&nbsp;</p>
+		
+		<p><br><b>4)</b> Solve: &int;<i>3e<sup>x</sup>dx</i><br><input type="text" id="userAns4" value=""></p>
+		<button class="btn" id="check4">Check</button>
+		<p id="feedback4">&nbsp;</p>
+		
+		<p><br><b>5)</b> Solve: &int;<i>5dx</i><br><input type="text" id="userAns5" value=""></p>
+		<button class="btn" id="check5">Check</button>
+		<p id="feedback5">&nbsp;</p>
+		
+		<p><br><b>6)</b> Solve: <sup>d</sup>&frasl;<sub>dx</sub>(<i>sin(2x)</i>)<br><input type="text" id="userAns6" value=""></p>
+		<button class="btn" id="check6">Check</button>
+		<p id="feedback6">&nbsp;</p>
+		
+		<p><br><b>7)</b> Solve: <sup>d</sup>&frasl;<sub>dx</sub>(<i><sup>2</sup>&frasl;<sub>3</sub>x<sup>9</sup></i>)<br><input type="text" id="userAns7" value=""></p>
+		<button class="btn" id="check7">Check</button>
+		<p id="feedback7">&nbsp;</p>
+		
+		<p><br><b>8)</b> Solve: <sup>d</sup>&frasl;<sub>dx</sub>((<i>2x&sup2; + 1</i>)<i><sup>2</sup></i>)<br><input type="text" id="userAns8" value=""></p>
+		<button class="btn" id="check8">Check</button>
+		<p id="feedback8">&nbsp;</p>
+		
+		<p><br><b>9)</b> Solve: <sup>d</sup>&frasl;<sub>dx</sub>(<i>e<sup>1 + x</sup></i>)<br><input type="text" id="userAns9" value=""></p>
+		<button class="btn" id="check9">Check</button>
+		<p id="feedback9">&nbsp;</p>
+		
+		<p><br><b>10)</b> For a particular function <i>g</i>, we know <i>g'</i>(5) = 2 and <i>g</i>(5) = -3. Write an equation for the line tangent to <i>g</i> at <i>x</i> = 5 in terms of <i>x</i> and <i>y</i> in slope-intercept form.<br><input type="text" id="userAns10" value=""></p>
+		<button class="btn" id="check10">Check</button>
+		<p id="feedback10">&nbsp;</p>
 	</body>
 </html>
