--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<h1>Quiz</h1>	
 		<p id="directions">Enter answers with spaces in between terms and denote with basic text math functions, enter "2&sup2;+2x" as "2^2 + 2x" <br> Use "C" as the arbitrary constant for integration</p>
 		
-		<p><b>1)</b> Solve: &int;<i>(4x + 2)dx</i><br><input type="text" id="userAns1" value=""></p>
+		<p><b>1)</b> Solve: &int;(<i>4x + 2</i>)<i>dx</i><br><input type="text" id="userAns1" value=""></p>
 		<button class="btn" id="check1">Check</button>
 		<p id="feedback1">&nbsp;</p>
 		
@@ -18,7 +18,7 @@
 		<button class="btn" id="check2">Check</button>
 		<p id="feedback2">&nbsp;</p>
 		
-		<p><br><b>3)</b> Solve: &int;<i>(18x&sup2; + 6x + 3)dx</i><br><input type="text" id="userAns3" value=""></p>
+		<p><br><b>3)</b> Solve: &int;(<i>18x&sup2; + 6x + 3</i>)<i>dx</i><br><input type="text" id="userAns3" value=""></p>
 		<button class="btn" id="check3">Check</button>
 		<p id="feedback3">&nbsp;</p>
 		
