Condensed JS functions
Optimized the JS file and added CSS

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Online Interactive Quiz with Answers</title>
+		<title>Online Interactive Math Quiz with Answers</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="script.js"></script>
 	</head>
 	<body>
-		<h1>Quiz</h1>	
-		<p id="directions">Enter answers with spaces in between terms and denote with basic text math functions, enter "2&sup2;+2x" as "2^2 + 2x" <br> Use "C" as the arbitrary constant for integration</p>
+		<h1 class="underline-small">Math Quiz</h1>	
+		<p id="directions"><br>Enter answers with spaces in between terms and basic text form math notation, enter "2&sup2;+2x" as "2^2 + 2x" <br> Use "C" as the arbitrary constant for integration</p>
 		
-		<p><b>1)</b> Solve: &int;(<i>4x + 2</i>)<i>dx</i><br><input type="text" id="userAns1" value=""></p>
+		<p><b><br>1)</b> Solve: &int;(<i>4x + 2</i>)<i>dx</i><br><input type="text" id="userAns1" value=""></p>
 		<button class="btn" id="check1">Check</button>
 		<p id="feedback1">&nbsp;</p>
 		
