--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 		<script src="script.js"></script>
 	</head>
 	<body>
+		<a id="button"></a> <!--Button to return to the top of the page-->
+		
 		<h1 class="underline-small">Math Quiz</h1>	
 		<p id="directions"><br>Enter answers with spaces in between terms and basic text form math notation, enter "2&sup2;+2x" as "2^2 + 2x" <br> Use "C" as the arbitrary constant for integration</p>
+		<button class="btnClear" id="clearAll">Clear All</button> <!--Button to clear all entries and hide all feedback-->
 		
 		<p><b><br>1)</b> Solve: &int;(<i>4x + 2</i>)<i>dx</i><br><input type="text" id="userAns1" value=""></p>
 		<button class="btn" id="check1">Check</button>
